--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 	<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
 	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+	<link rel="stylesheet" type="text/css" href="tubes.css">
 </head>
 <body style="font-family: sans-serif;">
 	<div>
@@ -29,23 +30,17 @@
       				<img class="" src="https://www.schofficial.com/Content/frontend/img/cart-white.png" style="height: 12px; width: 12px;">
       			</a>
       		</li>
-    	</ul>
-		<!-- <nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-left">
-			<a class="navbar-brand" href="#"><img src="https://www.schofficial.com/Content/frontend/img/logo.png" style="width: 60px;"></a>
-			<button type="button" class="btn-sidebar" style="line-height:0">
-				<img class="img-full changetoback bg-dark navbar-dark" src="https://www.schofficial.com/Content/frontend/img/toggle-menu.png" style="height: 16px; width: 16px;"></span>
-			</button>
-			<a href="/en/wishlist"><img class="img-full" src="https://www.schofficial.com/Content/frontend/img/wishlist.png" style="height: 16px; margin: 8px;"></a>
-		</nav> -->
+		</ul>
 	</div>
 	<div class="row">
-	  	<div class="col-md-3">
-	  		<div>
+	  	<div class="satu col-md-3">
+	  		<div class="">
 	  			<a href="#" style="font-size: 12px; text-decoration: none; color: inherit;">SHOP MALE</a><br style="display: block; padding: ">
 	  			<a href="#" style="font-size: 8px; text-decoration: none; color: inherit;">VIEW NOW</a>
+
 	  		</div>
 	  	</div>
-	  	<div class="col-md-3">
+	  	<div class="dua col-md-3">
 	  		<div>
 	  			<a href="#" style="font-size: 12px; text-decoration: none; color: inherit;">SHOP FEMALE</a>
 	  			<a href="#" style="font-size: 8px; text-decoration: none; color: inherit;">VIEW NOW</a>
