--- a/index.html
+++ b/index.html
@@ -3,59 +3,74 @@
 <head>
 	<title>Sch</title>
 	<link rel="icon" type="image/png" href="https://www.schofficial.com/favicon.ico">
-	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-	<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
-	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha3124-MCw912/SFnGE12fJT3GXwEOngsV7Zt27NXFoaoApmYm121iuXoPkFOJwJ12ERdknLPMO" crossorigin="anonymous">
+	<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha3124-q12i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+12abtTE1Pi6jizo" crossorigin="anonymous"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha3124-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn6129aCwoqbBJiSnjAK/l12WvCWPIPm49" crossorigin="anonymous"></script>
+	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha3124-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
 	<link rel="stylesheet" type="text/css" href="tubes.css">
+	<script type="text/javascript" src="tubes.js"></script>
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+	<link rel="stylesheet" type="text/css" href="nav.css">
 </head>
-<body style="font-family: sans-serif;">
-	<div>
-		<ul class="navbar navbar-nav navbar-dark bg-dark fixed-left">
-			<li class="nav-item">
-        		<a class="navbar-brand" href="#"><img src="https://www.schofficial.com/Content/frontend/img/logo.png" style="width: 40px;"></a>
-      		</li>
-      		<li class="nav-item">
-        		<button type="button" class="btn" style="line-height:0; background: none; border: none;">
-					<img class="img-full changetoback bg-dark navbar-dark" src="https://www.schofficial.com/Content/frontend/img/toggle-menu.png" style="height: 12px; width: 12px;">
+<body>
+	<nav class="navbar navbar-expand-sm navbar-dark bg-dark fixed-left">
+    <a class="navbar-brand" href=""><img src="https://www.schofficial.com/Content/frontend/img/logo.png" style="width: 80px; margin-bottom: 40px;"></a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+    </button>
+
+    <div class="collapse navbar-collapse" id="navbarsExampleDefault">
+        <ul class="navbar-nav">
+        	<li class="nav-item">
+        		<button type="button" class="btn" style="line-height:0; background: none; border: none; outline: none;">
+					<img class="img-full changetoback bg-dark navbar-dark" src="https://www.schofficial.com/Content/frontend/img/toggle-menu.png" style="height: 20px; width: 20px; margin-bottom: 20px;">
 				</button>
       		</li>
       		<li class="nav-item">
-      			<a href="/en/wishlist">
-      				<img src="https://www.schofficial.com/Content/frontend/img/wishlist.png" style="height: 12px; width: 12px;">
+      			<a href="#">
+      				<img src="https://www.schofficial.com/Content/frontend/img/wishlist.png" style="height: 20px; width: 20px;margin-bottom: 20px;">
       			</a>
       		</li>
       		<li class="nav-item">
-      			<a href="/en/step/basket">
-      				<img class="" src="https://www.schofficial.com/Content/frontend/img/cart-white.png" style="height: 12px; width: 12px;">
+      			<a href="#">
+      				<img class="" src="https://www.schofficial.com/Content/frontend/img/cart-white.png" style="height: 20px; width: 20px;">
       			</a>
       		</li>
-		</ul>
-	</div>
+        </ul>
+    </div>
+</nav>
 	<div class="row">
 	  	<div class="satu col-md-3">
-	  		<div class="">
-	  			<a href="#" style="font-size: 12px; text-decoration: none; color: inherit;">SHOP MALE</a><br style="display: block; padding: ">
-	  			<a href="#" style="font-size: 8px; text-decoration: none; color: inherit;">VIEW NOW</a>
-
+	  		<div class="teks">
+	  			<a href="#" style="text-decoration: none; color: #F2F2F2; text-align: left;">
+	  				<h3 style="margin-bottom: -2PX; margin-top: 100px; font-size: 21px; text-align: left; margin-left: 80px;">SHOP MALE</h3>
+	  				<h3 style="font-size: 12px; margin-left: 80px;">VIEW NOW</h3>
+	  				<!-- <span style="font-size: 12px;">VIEW NOW</span> -->
+	  			</a>
 	  		</div>
 	  	</div>
 	  	<div class="dua col-md-3">
-	  		<div>
-	  			<a href="#" style="font-size: 12px; text-decoration: none; color: inherit;">SHOP FEMALE</a>
-	  			<a href="#" style="font-size: 8px; text-decoration: none; color: inherit;">VIEW NOW</a>
+	  		<div class="teks">
+	  			<a href="#" style="text-decoration: none; color: #F2F2F2;">
+	  				<h3 style="margin-bottom: -4px; margin-top: 100px; font-size: 21px;">SHOP FEMALE</h3>
+	  				<span style="font-size: 12px;"">VIEW NOW</span>
+	  			</a>
 	  		</div>
 	  	</div>
-	  	<div class="col-md-3">
-	  		<div>
-	  			<a href="#" style="font-size: 12px; text-decoration: none; color: inherit;">FIND US</a><br>
-	  			<a href="#" style="font-size: 8px; text-decoration: none; color: inherit;">VIEW LOCATION</a>
+	  	<div class="tiga col-md-3">
+	  		<div class="teks">
+	  			<a href="#" style="text-decoration: none; color: #F2F2F2;">
+	  				<h3 style="margin-bottom: -4px; margin-top: 100px; font-size: 21px;">FIND US</h3>
+	  				<span style="font-size: 12px;"">VIEW LOCATION</span>
+	  			</a>
 	  		</div>
 	  	</div>
-	  	<div class="col-md-3">
-	  		<div>
-	  			<a href="#" style="font-size: 12px; text-decoration: none; color: inherit;">EOL 2018 DEALS WINNER LIST</a><br>
-	  			<a href="#" style="font-size: 8px; text-decoration: none; color: inherit;">READ THE NEWS</a>
+	  	<div class="empat col-md-3">
+	  		<div class="teks">
+	  			<a href="#" style="text-decoration: none; color: #F2F2F2;">
+	  				<h3 style="margin-bottom: -4px; margin-top: 100px; font-size: 21px;">EOL 2018 DEALS WINNER LIST</h3>
+	  				<span style="font-size: 12px;">READ THE NEWS</span>
+	  			</a>
 	  		</div>
 	  	</div>
 	</div>
