--- a/index.html
+++ b/index.html
@@ -11,18 +11,21 @@
 	<script type="text/javascript" src="tubes.js"></script>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 	<link rel="stylesheet" type="text/css" href="nav.css">
+	<!-- <link rel="stylesheet" type="text/css" href="style.css"> -->
+	<!-- <link rel="stylesheet" type="text/css" href="dummy.css"> -->
 </head>
 <body>
 	<nav class="navbar navbar-expand-sm navbar-dark bg-dark fixed-left">
     <a class="navbar-brand" href=""><img src="https://www.schofficial.com/Content/frontend/img/logo.png" style="width: 80px; margin-bottom: 40px;"></a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
+    <button class="navbar-toggler" type="button" class="btn btn-primary" data-toggle="modal" data-target=".bd-example-modal-lg">
         <span class="navbar-toggler-icon"></span>
     </button>
 
     <div class="collapse navbar-collapse" id="navbarsExampleDefault">
         <ul class="navbar-nav">
         	<li class="nav-item">
-        		<button type="button" class="btn" style="line-height:0; background: none; border: none; outline: none;">
+        		<button type="button" class="btn" data-toggle="modal" data-target=".bd-example-modal-lg" style="line-height:0; background: none; border: none; outline-style: none;">
+        			<!-- <button type="button" class="btn" data-toggle="modal" data-target="#myModal" style="line-height:0; background: none; border: none; outline: none;"> -->
 					<img class="img-full changetoback bg-dark navbar-dark" src="https://www.schofficial.com/Content/frontend/img/toggle-menu.png" style="height: 20px; width: 20px; margin-bottom: 20px;">
 				</button>
       		</li>
@@ -53,7 +56,7 @@
 	  		<div class="teks">
 	  			<a href="#" style="text-decoration: none; color: #F2F2F2;">
 	  				<h3 style="margin-bottom: -4px; margin-top: 100px; font-size: 21px;">SHOP FEMALE</h3>
-	  				<span style="font-size: 12px;"">VIEW NOW</span>
+	  				<span style="font-size: 12px;">VIEW NOW</span>
 	  			</a>
 	  		</div>
 	  	</div>
@@ -61,7 +64,7 @@
 	  		<div class="teks">
 	  			<a href="#" style="text-decoration: none; color: #F2F2F2;">
 	  				<h3 style="margin-bottom: -4px; margin-top: 100px; font-size: 21px;">FIND US</h3>
-	  				<span style="font-size: 12px;"">VIEW LOCATION</span>
+	  				<span style="font-size: 12px;">VIEW LOCATION</span>
 	  			</a>
 	  		</div>
 	  	</div>
@@ -74,4 +77,136 @@
 	  		</div>
 	  	</div>
 	</div>
+
+<!-- <<div class="container">
+	
+	<!- Modal -->
+	<!-- <div class="modal left fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+		<div class="modal-dialog" role="document">
+			<div class="modal-content">
+				<div class="col-md-6">
+					
+				</div>
+			</div>
+		</div>
+	</div> -->
+	<!-- Large modal -->
+
+
+<div class="modal fade left bd-example-modal-lg bg-dark col-md-6" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true">
+  <div class="modal-dialog modal-lg">
+    <div class="modal-content">
+    	<div class="modal-body">
+    		kurang ini pokonya :(
+			<!-- <ul class="rsch-ul" style="border-top:0">
+				<li class="">
+					<a href="javascript:;">Male</a>
+						<div style="padding-left: 25px; display: none;">
+							<ul>
+								<li>
+									<a href="/en/male/new">Shop</a>
+								</li>
+								<li>
+									<a href="/en/family">Fit Guide</a>
+								</li>
+								<li>
+									<a href="/en/download">Lookbook</a>
+								</li>
+							</ul>
+						</div>
+				</li>
+				<li class="">
+					<a href="javascript:;">Female</a>
+						<div style="padding-left: 25px; display: none;">
+							<ul>
+								<li>
+									<a href="/en/female/new">Shop</a>
+								</li>
+								<li>
+									<a href="/en/family">Fit Guide</a>
+								</li>
+								<li>
+									<a href="/en/download">Lookbook</a>
+								</li>
+							</ul>
+						</div>
+				</li>
+				<li class="">
+					<a href="javascript:;">Kids</a>
+						<div style="padding-left: 25px; display: none;">
+							<ul>
+								<li>
+									<a href="/en/kids/new">Shop</a>
+								</li>
+								<li>
+									<a href="/en/family">Fit Guide</a>
+								</li>
+								<li>
+									<a href="/en/download">Lookbook</a>
+								</li>
+							</ul>
+						</div>
+				</li>
+				<li class="">
+					<a href="javascript:;">Toddler</a>
+						<div style="padding-left: 25px; display: none;">
+							<ul>
+								<li>
+									<a href="/en/toddler/new">Shop</a>
+								</li>
+								<li>
+									<a href="/en/family">Fit Guide</a>
+								</li>
+								<li>
+									<a href="/en/download">Lookbook</a>
+								</li>
+							</ul>
+						</div>
+				</li>
+			</ul> -->
+
+
+<!-- Split button -->
+<!-- <div class="btn-group btn-block">
+<a role="button" href="#services" class="text-left btn btn-lg btn-default col-xs-10">Services</a>
+<button type="button" class="btn btn-lg btn-default col-xs-2 dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+<span class="fa fa-chevron-down"></span>
+<span class="sr-only">Toggle Dropdown</span>
+</button>
+<ul class="dropdown-menu btn-block">
+<li><a href="#design">Design</a></li>
+<li role="separator" class="divider"></li>
+<li><a href="#develop">Develop</a></li>
+<li role="separator" class="divider"></li>
+<li><a href="#support">Support</a></li>
+</ul>
+</div>
+
+<a href="#about" class="btn btn-block btn-default btn-lg">About</a>
+
+<hr>
+
+<div class="form-group">
+<div class="input-group">
+<input class="form-control" placeholder="Search">
+<span class="input-group-btn">
+<button class="btn btn-default" type="button"><i class="fa fa-fw fa-search"></i></button>
+</span>
+</div>
+</div>
+
+<hr>
+
+<div class="btn-group btn-group-justified">
+<a class="btn btn-instagram btn-lg" href="https://www.instagram.com/jorenerene/" target="_blank"><i class="fa fa-fw fa-instagram"></i></a>
+<a class="btn btn-twitter btn-lg" href="https://www.twitter.com/jorenerene/" target="_blank"><i class="fa fa-fw fa-twitter"></i></a>
+<a class="btn btn-github btn-lg" href="https://www.github.com/jorenerene/" target="_blank"><i class="fa fa-fw fa-github"></i></a>
+</div>
+
+</div>
+      
+    </div>
+  </div>
+</div> -->
+
 </html>
