--- a/index.html
+++ b/index.html
@@ -11,12 +11,10 @@
 	<script type="text/javascript" src="tubes.js"></script>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 	<link rel="stylesheet" type="text/css" href="nav.css">
-	<!-- <link rel="stylesheet" type="text/css" href="style.css"> -->
-	<!-- <link rel="stylesheet" type="text/css" href="dummy.css"> -->
 </head>
 <body>
 	<nav class="navbar navbar-expand-sm navbar-dark bg-dark fixed-left">
-    <a class="navbar-brand" href=""><img src="https://www.schofficial.com/Content/frontend/img/logo.png" style="width: 80px; margin-bottom: 40px;"></a>
+    <a class="navbar-brand" href=""><img src="https://www.schofficial.com/Content/frontend/img/logo.png" style="width: 72px; margin-bottom: 36px;"></a>
     <button class="navbar-toggler" type="button" class="btn btn-primary" data-toggle="modal" data-target=".bd-example-modal-lg">
         <span class="navbar-toggler-icon"></span>
     </button>
@@ -25,18 +23,17 @@
         <ul class="navbar-nav">
         	<li class="nav-item">
         		<button type="button" class="btn" data-toggle="modal" data-target=".bd-example-modal-lg" style="line-height:0; background: none; border: none; outline-style: none;">
-        			<!-- <button type="button" class="btn" data-toggle="modal" data-target="#myModal" style="line-height:0; background: none; border: none; outline: none;"> -->
-					<img class="img-full changetoback bg-dark navbar-dark" src="https://www.schofficial.com/Content/frontend/img/toggle-menu.png" style="height: 20px; width: 20px; margin-bottom: 20px;">
+					<img class="img-full changetoback bg-dark navbar-dark" src="https://www.schofficial.com/Content/frontend/img/toggle-menu.png" style="height: 16px; width: 16px; margin-bottom: 20px;">
 				</button>
       		</li>
       		<li class="nav-item">
       			<a href="#">
-      				<img src="https://www.schofficial.com/Content/frontend/img/wishlist.png" style="height: 20px; width: 20px;margin-bottom: 20px;">
+      				<img src="https://www.schofficial.com/Content/frontend/img/wishlist.png" style="height: 16px; width: 16px;margin-bottom: 20px;">
       			</a>
       		</li>
       		<li class="nav-item">
       			<a href="#">
-      				<img class="" src="https://www.schofficial.com/Content/frontend/img/cart-white.png" style="height: 20px; width: 20px;">
+      				<img class="" src="https://www.schofficial.com/Content/frontend/img/cart-white.png" style="height: 16px; width: 16px;">
       			</a>
       		</li>
         </ul>
@@ -47,8 +44,7 @@
 	  		<div class="teks">
 	  			<a href="#" style="text-decoration: none; color: #F2F2F2; text-align: left;">
 	  				<h3 style="margin-bottom: -2PX; margin-top: 100px; font-size: 21px; text-align: left; margin-left: 80px;">SHOP MALE</h3>
-	  				<h3 style="font-size: 12px; margin-left: 80px;">VIEW NOW</h3>
-	  				<!-- <span style="font-size: 12px;">VIEW NOW</span> -->
+	  				<span style="font-size: 12px;">VIEW NOW</span>
 	  			</a>
 	  		</div>
 	  	</div>
@@ -68,7 +64,7 @@
 	  			</a>
 	  		</div>
 	  	</div>
-	  	<div class="empat col-md-3">
+	  	<div class="empat col-md-2">
 	  		<div class="teks">
 	  			<a href="#" style="text-decoration: none; color: #F2F2F2;">
 	  				<h3 style="margin-bottom: -4px; margin-top: 100px; font-size: 21px;">EOL 2018 DEALS WINNER LIST</h3>
@@ -78,26 +74,17 @@
 	  	</div>
 	</div>
 
-<!-- <<div class="container">
-	
-	<!- Modal -->
-	<!-- <div class="modal left fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
-		<div class="modal-dialog" role="document">
-			<div class="modal-content">
-				<div class="col-md-6">
-					
-				</div>
-			</div>
-		</div>
-	</div> -->
-	<!-- Large modal -->
-
-
-<div class="modal fade left bd-example-modal-lg bg-dark col-md-6" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true">
-  <div class="modal-dialog modal-lg">
-    <div class="modal-content">
+<div class="modal fade left bd-example-modal-lg bg-dark col-md-6" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true" style="">
+  <div class="modal-dialog">
+    <div class="modal-content bg-dark" style="">
     	<div class="modal-body">
-    		kurang ini pokonya :(
+        <div class="media">
+          <div class="media-left">
+            <h4 class="media-heading">Media heading</h4>
+            kurang ini pokonya
+          </div>
+        </div>
+      </div>
 			<!-- <ul class="rsch-ul" style="border-top:0">
 				<li class="">
 					<a href="javascript:;">Male</a>
@@ -164,49 +151,9 @@
 						</div>
 				</li>
 			</ul> -->
-
-
-<!-- Split button -->
-<!-- <div class="btn-group btn-block">
-<a role="button" href="#services" class="text-left btn btn-lg btn-default col-xs-10">Services</a>
-<button type="button" class="btn btn-lg btn-default col-xs-2 dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-<span class="fa fa-chevron-down"></span>
-<span class="sr-only">Toggle Dropdown</span>
-</button>
-<ul class="dropdown-menu btn-block">
-<li><a href="#design">Design</a></li>
-<li role="separator" class="divider"></li>
-<li><a href="#develop">Develop</a></li>
-<li role="separator" class="divider"></li>
-<li><a href="#support">Support</a></li>
-</ul>
+		</div>
+	</div>
 </div>
-
-<a href="#about" class="btn btn-block btn-default btn-lg">About</a>
-
-<hr>
-
-<div class="form-group">
-<div class="input-group">
-<input class="form-control" placeholder="Search">
-<span class="input-group-btn">
-<button class="btn btn-default" type="button"><i class="fa fa-fw fa-search"></i></button>
-</span>
-</div>
-</div>
-
-<hr>
-
-<div class="btn-group btn-group-justified">
-<a class="btn btn-instagram btn-lg" href="https://www.instagram.com/jorenerene/" target="_blank"><i class="fa fa-fw fa-instagram"></i></a>
-<a class="btn btn-twitter btn-lg" href="https://www.twitter.com/jorenerene/" target="_blank"><i class="fa fa-fw fa-twitter"></i></a>
-<a class="btn btn-github btn-lg" href="https://www.github.com/jorenerene/" target="_blank"><i class="fa fa-fw fa-github"></i></a>
-</div>
-
-</div>
-      
-    </div>
-  </div>
-</div> -->
+</body>
 
 </html>
