--- a/index.html
+++ b/index.html
@@ -7,14 +7,15 @@
 	<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha3124-q12i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+12abtTE1Pi6jizo" crossorigin="anonymous"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha3124-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn6129aCwoqbBJiSnjAK/l12WvCWPIPm49" crossorigin="anonymous"></script>
 	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha3124-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
-	<link rel="stylesheet" type="text/css" href="tubes.css">
-	<script type="text/javascript" src="tubes.js"></script>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 	<link rel="stylesheet" type="text/css" href="nav.css">
+	<link rel="stylesheet" type="text/css" href="tubes.css">
+	<script type="text/javascript" src="nav.js"></script>
+	<script type="text/javascript" src="index.js"></script>
 </head>
 <body>
 	<nav class="navbar navbar-expand-sm navbar-dark bg-dark fixed-left">
-    <a class="navbar-brand" href=""><img src="https://www.schofficial.com/Content/frontend/img/logo.png" style="width: 72px; margin-bottom: 36px;"></a>
+    <a class="navbar-brand" href="index.html"><img src="https://www.schofficial.com/Content/frontend/img/logo.png" style="width: 72px; margin-bottom: 36px;"></a>
     <button class="navbar-toggler" type="button" class="btn btn-primary" data-toggle="modal" data-target=".bd-example-modal-lg">
         <span class="navbar-toggler-icon"></span>
     </button>
@@ -43,7 +44,7 @@
 	  	<div class="satu col-md-3">
 	  		<div class="teks">
 	  			<a href="#" style="text-decoration: none; color: #F2F2F2; text-align: left;">
-	  				<h3 style="margin-bottom: -2PX; margin-top: 100px; font-size: 21px; text-align: left; margin-left: 80px;">SHOP MALE</h3>
+	  				<h3 style="margin-bottom: -2PX; margin-top: 80px; font-size: 21px; text-align: left; margin-left: 80px;">SHOP MALE</h3>
 	  				<span style="font-size: 12px;">VIEW NOW</span>
 	  			</a>
 	  		</div>
@@ -51,7 +52,7 @@
 	  	<div class="dua col-md-3">
 	  		<div class="teks">
 	  			<a href="#" style="text-decoration: none; color: #F2F2F2;">
-	  				<h3 style="margin-bottom: -4px; margin-top: 100px; font-size: 21px;">SHOP FEMALE</h3>
+	  				<h3 style="margin-bottom: -4px; margin-top: 80px; font-size: 21px;">SHOP FEMALE</h3>
 	  				<span style="font-size: 12px;">VIEW NOW</span>
 	  			</a>
 	  		</div>
@@ -59,15 +60,15 @@
 	  	<div class="tiga col-md-3">
 	  		<div class="teks">
 	  			<a href="#" style="text-decoration: none; color: #F2F2F2;">
-	  				<h3 style="margin-bottom: -4px; margin-top: 100px; font-size: 21px;">FIND US</h3>
+	  				<h3 style="margin-bottom: -4px; margin-top: 80px; font-size: 21px;">FIND US</h3>
 	  				<span style="font-size: 12px;">VIEW LOCATION</span>
 	  			</a>
 	  		</div>
 	  	</div>
-	  	<div class="empat col-md-2">
+	  	<div class="empat col-md-3">
 	  		<div class="teks">
 	  			<a href="#" style="text-decoration: none; color: #F2F2F2;">
-	  				<h3 style="margin-bottom: -4px; margin-top: 100px; font-size: 21px;">EOL 2018 DEALS WINNER LIST</h3>
+	  				<h3 style="margin-bottom: -4px; margin-top: 80px; font-size: 21px;">EOL 2018 DEALS WINNER LIST</h3>
 	  				<span style="font-size: 12px;">READ THE NEWS</span>
 	  			</a>
 	  		</div>
@@ -75,83 +76,112 @@
 	</div>
 
 <div class="modal fade left bd-example-modal-lg bg-dark col-md-6" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true" style="">
-  <div class="modal-dialog">
-    <div class="modal-content bg-dark" style="">
+  	<div class="modal-dialog">
+    <div class="modal-content bg-dark" style="border: none; height: 600px; margin-left: -80px; margin-top: 48px;">
     	<div class="modal-body">
         <div class="media">
-          <div class="media-left">
-            <h4 class="media-heading">Media heading</h4>
-            kurang ini pokonya
-          </div>
-        </div>
-      </div>
-			<!-- <ul class="rsch-ul" style="border-top:0">
-				<li class="">
-					<a href="javascript:;">Male</a>
-						<div style="padding-left: 25px; display: none;">
-							<ul>
-								<li>
-									<a href="/en/male/new">Shop</a>
-								</li>
-								<li>
-									<a href="/en/family">Fit Guide</a>
-								</li>
-								<li>
-									<a href="/en/download">Lookbook</a>
-								</li>
-							</ul>
-						</div>
-				</li>
-				<li class="">
-					<a href="javascript:;">Female</a>
-						<div style="padding-left: 25px; display: none;">
-							<ul>
-								<li>
-									<a href="/en/female/new">Shop</a>
-								</li>
-								<li>
-									<a href="/en/family">Fit Guide</a>
-								</li>
-								<li>
-									<a href="/en/download">Lookbook</a>
-								</li>
-							</ul>
-						</div>
-				</li>
-				<li class="">
-					<a href="javascript:;">Kids</a>
-						<div style="padding-left: 25px; display: none;">
-							<ul>
-								<li>
-									<a href="/en/kids/new">Shop</a>
-								</li>
-								<li>
-									<a href="/en/family">Fit Guide</a>
-								</li>
-								<li>
-									<a href="/en/download">Lookbook</a>
-								</li>
-							</ul>
-						</div>
-				</li>
-				<li class="">
-					<a href="javascript:;">Toddler</a>
-						<div style="padding-left: 25px; display: none;">
-							<ul>
-								<li>
-									<a href="/en/toddler/new">Shop</a>
-								</li>
-								<li>
-									<a href="/en/family">Fit Guide</a>
-								</li>
-								<li>
-									<a href="/en/download">Lookbook</a>
-								</li>
-							</ul>
-						</div>
-				</li>
-			</ul> -->
+          	<div class="media-left" style="width: 288px;">
+            	<ul class="mainmenu" style="text-align: left;">
+        			<li class="dropdown">
+          				<a href="#" class="dropdown-link">Male</a>
+          				<ul class="submenu">
+            				<li><a href="" style="margin-left: 24px; margin-top: -20px; position: absolute; font-style: italic; color: grey;">Shop</a></li>
+            				<li><a href="family.html" style="margin-left: 24px; margin-bottom: -20px; font-style: italic; color: grey;">Fit Guide</a></li>
+            				<li><a href="download.html" style="margin-left: 24px; margin-bottom: 4px; font-style: italic; color: grey;">Lookbook</a></li>
+          				</ul>
+        			</li>
+        			<li class="dropdown">
+          				<a href="#" class="dropdown-link">Female</a>
+          				<ul class="submenu">
+		            		<li><a href="" style="margin-left: 24px; margin-top: -20px; position: absolute; font-style: italic; color: grey;">Shop</a></li>
+            				<li><a href="family.html" style="margin-left: 24px; margin-bottom: -20px; font-style: italic; color: grey;">Fit Guide</a></li>
+            				<li><a href="download.html" style="margin-left: 24px; margin-bottom: 4px; font-style: italic; color: grey;">Lookbook</a></li>
+          				</ul>
+        			</li>
+        			<li class="dropdown">
+          				<a href="#" class="dropdown-link">Kids</a>
+          				<ul class="submenu">
+            				<li><a href="" style="margin-left: 24px; margin-top: -20px; position: absolute; font-style: italic; color: grey;">Shop</a></li>
+            				<li><a href="family.html" style="margin-left: 24px; margin-bottom: -20px; font-style: italic; color: grey;">Fit Guide</a></li>
+            				<li><a href="download.html" style="margin-left: 24px; margin-bottom: 4px; font-style: italic; color: grey;">Lookbook</a></li>
+          				</ul>
+        			</li>
+        			<li class="dropdown">
+          				<a href="#" class="dropdown-link">Toddler</a>
+          				<ul class="submenu">
+            				<li><a href="" style="margin-left: 24px; margin-top: -20px; position: absolute; font-style: italic; color: grey;">Shop</a></li>
+            				<li><a href="family.html" style="margin-left: 24px; margin-bottom: -20px; font-style: italic; color: grey;">Fit Guide</a></li>
+            				<li><a href="download.html" style="margin-left: 24px; margin-bottom: 4px; font-style: italic; color: grey;">Lookbook</a></li>
+          				</ul>
+        			</li>
+      			</ul>
+            <hr style="border-color: white; margin-top: 60px;">
+            <ul class="mainmenu" style="text-align: left;">
+              <li class="dropdown">
+                  <a href="#" class="dropdown-link">About Us</a>
+                  <ul class="submenu">
+                    <li><a href="" style="margin-left: 24px; margin-top: -20px; position: absolute; font-style: italic; color: grey;">History</a></li>
+                    <li><a href="family.html" style="margin-left: 24px; margin-bottom: -20px; font-style: italic; color: grey;">Family</a></li>
+                    <li><a href="download.html" style="margin-left: 24px; margin-bottom: -20px; font-style: italic; color: grey;">Download</a></li>
+                    <li><a href="career.html" style="margin-left: 24px; margin-bottom: 4px; font-style: italic; color: grey;">Career</a></li>
+                  </ul>
+              </li>
+              <li class="dropdown">
+                  <a href="#" class="dropdown-link">Campaign</a>
+                  <ul class="submenu">
+                    <li><a href="" style="margin-left: 24px; margin-top: -20px; position: absolute; font-style: italic; color: grey;">News</a></li>
+                    <li><a href="" style="margin-left: 24px; margin-bottom: 4px; font-style: italic; color: grey;">Project</a></li>
+                  </ul>
+              </li>
+              <li class="dropdown">
+                  <a href="#" class="dropdown-link">Find Us</a>
+                  <ul class="submenu">
+                    <li><a href="" style="margin-left: 24px; margin-top: -20px; position: absolute; font-style: italic; color: grey;">Store</a></li>
+                    <li><a href="" style="margin-left: 24px; margin-bottom: 4px; font-style: italic; color: grey;">Distribution</a></li>
+                  </ul>
+              </li>
+              <li class="dropdown">
+                  <a href="#" class="dropdown-link">Customer Service</a>
+                  <ul class="submenu">
+                    <li><a href="" style="margin-left: 24px; margin-top: -20px; position: absolute; font-style: italic; color: grey;">FAQ</a></li>
+                    <li><a href="" style="margin-left: 24px; margin-bottom: -20px; font-style: italic; color: grey;">Clothing Care</a></li>
+                    <li><a href="" style="margin-left: 24px; margin-bottom: 4px; font-style: italic; color: grey;">Contact Us</a></li>
+                  </ul>
+              </li>
+            </ul>
+           <!--  <hr style="border-color: white; margin-top: 60px;"> -->
+            <footer style="border-top:1px solid #fff; margin-top:15px; width: 100%; ">
+              <ul style="text-decoration: none; list-style: none;">
+                <li style="display: inline;">
+                  <a href="https://www.facebook.com/ouvalresearch"> 
+                    <img src="https://schofficial.com/content/frontend/assets/frontend/img/facebook.png"> 
+                  </a>
+                </li>
+                <li style="display: inline;">
+                  <a href="https://www.instagram.com/ouvalresearch"> 
+                    <img src="https://schofficial.com/content/frontend/assets/frontend/img/ig.png"> 
+                  </a>
+                </li>
+                <li style="display: inline;">
+                  <a href="http://www.youtube.com/ouvalresearch/"> 
+                    <img src="https://schofficial.com/content/frontend/assets/frontend/img/youtube.png"> 
+                  </a>
+                </li>
+                <li style="display: inline;">
+                  <a href="https://www.twitter.com/ouvalresearch"> 
+                    <img src="https://schofficial.com/content/frontend/assets/frontend/img/twitter.png"> 
+                  </a>
+                </li>
+              </ul>
+            </footer>
+
+            </div>
+          	<div class="media-right">
+            
+        	</div>
+        </div>	
 		</div>
+	</div>
 	</div>
 </div>
 </body>
