--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 
 <div class="modal fade left bd-example-modal-lg bg-dark col-md-6" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true" style="">
   	<div class="modal-dialog">
-    <div class="modal-content bg-dark" style="border: none; height: 600px; margin-left: -80px; margin-top: 48px;">
+    <div class="modal-content bg-dark" style="border: none; height: 580px; margin-left: -80px; margin-top: 48px;">
     	<div class="modal-body">
         <div class="media">
           	<div class="media-left" style="width: 288px;">
@@ -150,24 +150,24 @@
               </li>
             </ul>
            <!--  <hr style="border-color: white; margin-top: 60px;"> -->
-            <footer style="border-top:1px solid #fff; margin-top:15px; width: 100%; ">
-              <ul style="text-decoration: none; list-style: none;">
-                <li style="display: inline;">
+            <footer style="border-top:1px solid #fff; margin-top:300px; width: 288px; position: absolute; bottom: 0;">
+              <ul style="text-decoration: none; list-style: none; text-align: left; margin: 16px;">
+                <li style="display: inline; margin-left:-30px; margin-right: 12px;">
                   <a href="https://www.facebook.com/ouvalresearch"> 
                     <img src="https://schofficial.com/content/frontend/assets/frontend/img/facebook.png"> 
                   </a>
                 </li>
-                <li style="display: inline;">
+                <li style="display: inline; margin-right: 12px;">
                   <a href="https://www.instagram.com/ouvalresearch"> 
                     <img src="https://schofficial.com/content/frontend/assets/frontend/img/ig.png"> 
                   </a>
                 </li>
-                <li style="display: inline;">
+                <li style="display: inline; margin-right: 12px;">
                   <a href="http://www.youtube.com/ouvalresearch/"> 
                     <img src="https://schofficial.com/content/frontend/assets/frontend/img/youtube.png"> 
                   </a>
                 </li>
-                <li style="display: inline;">
+                <li style="display: inline; margin-right: 12px;">
                   <a href="https://www.twitter.com/ouvalresearch"> 
                     <img src="https://schofficial.com/content/frontend/assets/frontend/img/twitter.png"> 
                   </a>
@@ -176,7 +176,9 @@
             </footer>
 
             </div>
-          	<div class="media-right">
+          	<div class="media-right col-md-3 height-full" style="background-color: green;">
+              <h2 style="margin-left: 20px;">tes</h2>
+              <div class="-col-md-12 margtop50desktop"><div class="menu-date"><span>Year</span><div class="the-date-menu">2019</div><div class="col-xs-6" style="padding-right:10px"><span>Month</span><div class="the-date-menu">Apr</div></div><div class="col-xs-6" style="padding-left:10px"><span>Date</span><div class="the-date-menu">10</div></div><div class="col-xs-12 nopadding"><span>Day</span><div class="the-date-menu">Wed</div></div><div class="col-xs-12 nopadding margtop100desktop"><div style="font-weight:bold" class="the-date-menu"><a href="/en/login">LOGIN</a></div></div></div></div>
             
         	</div>
         </div>	
