--- a/index.html
+++ b/index.html
@@ -207,25 +207,29 @@
                 <p style=" font-size: 36px; margin-top: -8px;">
                   <script>document.write(new Date().getFullYear())</script>
                 </p>
-                <div style="">
-                  <div>
-                    <h6 style="border-bottom: 1px solid #000; width: 130px; font-size: 14px; padding-bottom: 4px;">Month</h6>
+                <div style="width: 300px;">
+                  <div style="width: 130px; height: 75px;">
+                    <h6 style="border-bottom: 1px solid #000; font-size: 14px; padding-bottom: 4px;">Month</h6>
                     <p id="month" style="font-size: 36px; margin-top: -8px;">
                       <script type="text/javascript">window.onload = month('month');</script>
                     </p>
                   </div>
-                  <div>
-                    <h6 style="border-bottom: 1px solid #000; width: 130px; font-size: 14px; padding-bottom: 4px;">Date</h6>
+                  <div style="width: 130px; height: 75px;">
+                    <h6 style="border-bottom: 1px solid #000; font-size: 14px; padding-bottom: 4px; width: 130px;">Date</h6>
                     <p id="datee" style="font-size: 36px; margin-top: -8px;">
                       <script type="text/javascript">window.onload = datee('datee');</script>
                     </p>
                   </div>
                 </div>
-                <h6 style="margin-top: 60px; border-bottom: 1px solid #000; width: 300px; font-size: 14px; padding-bottom: 4px;">Day</h6>
+                <h6 style="margin-top: 60px; border-bottom: 1px solid #000; width: 300px; font-size: 14px; padding-bottom: 4px; margin-top: 0px;">Day</h6>
                 <p id="day" style=" font-size: 36px; margin-top: -8px;">
                    <script type="text/javascript">window.onload = day('day');</script>
                 </p>
+                <div style="width: 250px;">
+                <a href="login.html" style="font-size: 36px; text-decoration: none; color: #000;border-top: 1px solid #000;">LOGIN</a>
+                </div>
               </div>
+                
         	</div>
         </div>	
 		</div>
