--- a/care.html
+++ b/care.html
@@ -1,11 +1,12 @@
+<!DOCTYPE html>
 <html>
 <head>
 	<meta name="viewport" content="width=device-width">
 	<title>Sch - Careinstruction</title>
-	<link runat="server" rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
-	<link runat="server" rel="icon" href="/favicon.ico" type="image/ico">
-	<link rel="icon" type="image/x-icon" href="/favicon.ico">
-	<link rel="shortcut" type="image/x-icon" href="/favicon.ico">
+	<link runat="server" rel="shortcut icon" href="https://www.schofficial.com/favicon.ico" type="image/x-icon">
+	<link runat="server" rel="icon" href="https://www.schofficial.com/favicon.ico" type="image/ico">
+	<link rel="icon" type="image/png" href="https://www.schofficial.com/favicon.ico">
+	<link rel="shortcut" type="image/x-icon" href="https://www.schofficial.com/favicon.ico">
 	<meta name="title" content="Shop online from our latest collection and get offers and latest news from Sch">
 	<meta name="description" content="Shop online from our latest collection and get offers and latest news from Sch">
 	<meta property="og:site_name" content="Sch - Shop Online, News and Promotion">
@@ -23,23 +24,30 @@
 	<link href="https://www.schofficial.com/Content/global/js/plugin/parsley/2.5.0/parsley.css" rel="stylesheet">
 	<link rel="stylesheet" href="/Content/frontend/css/jquery.mCustomScrollbar.css">
 	<link href="https://www.schofficial.com/Content/frontend/css/style-wit.css?v=2.10.1.9" rel="stylesheet">
-	<link href="https://www.schofficial.com/Content/frontend/css/settings17d1.css" rel="stylesheet" media="all">
-	<link rel="stylesheet" href="https://www.schofficial.com/Content/frontend/css/jquery.mCustomScrollbar.css">
-
+	<link href="https://www.schofficial.com/Content/frontend/css/flexslider.css" rel="stylesheet">
+	<style>.bggreydesktop p,.bggreydesktop a,.bggreydesktop .size-guide label,.bggreydesktop label.title-family,.bggreydesktop .paging-number{color:#111 !important}.category-products{width:92.5%}.flexslider{background:none;margin:0}.flex-control-nav{display:none}</style>
 	<style>#loader{position:absolute;top:0;bottom:0;left:0;right:0;background-color:white;opacity:0.5;z-index:99;display:none;text-align:center;width:100%;padding-top:25px}</style>
-
-	<script async="" src="//static.olark.com/jsclient/loader.js"></script>
-	<script src="https://connect.facebook.net/signals/config/798157910220272?v=2.8.47&amp;r=stable" async=""></script>
-	<script async="" src="https://connect.facebook.net/en_US/fbevents.js"></script>
-	<script async="" src="https://www.google-analytics.com/analytics.js"></script>
+	<script async src="//static.olark.com/jsclient/loader.js"></script>
+	<script src="https://connect.facebook.net/signals/config/798157910220272?v=2.8.47&r=stable" async></script>
+	<script async src="https://connect.facebook.net/en_US/fbevents.js"></script>
+	<script async src="https://www.google-analytics.com/analytics.js"></script>
 	<script>
 		(function(i,s,o,g,r,a,m)
-		{i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)})(window,document,'script','https://www.google-analytics.com/analytics.js','ga');ga('create','UA-55635415-1','auto');ga('send','pageview');</script>
-		<script>!function(f,b,e,v,n,t,s){if(f.fbq)return;n=f.fbq=function(){n.callMethod?n.callMethod.apply(n,arguments):n.queue.push(arguments)};if(!f._fbq)f._fbq=n;n.push=n;n.loaded=!0;n.version='2.0';n.queue=[];t=b.createElement(e);t.async=!0;t.src=v;s=b.getElementsByTagName(e)[0];s.parentNode.insertBefore(t,s)}(window,document,'script','https://connect.facebook.net/en_US/fbevents.js');fbq('init','798157910220272');fbq('track','PageView');</script>
-		<noscript><img height=1 width=1 src="https://www.facebook.com/tr?id=798157910220272&amp;ev=PageView&amp;noscript=1"></noscript>
-		<style data-olark="true" type="text/css">.olark-key,#hbl_code,#olark-data{display: none !important;}</style>
-		<style data-olark="true" type="text/css">@media print {#habla_beta_container_do_not_rely_on_div_classes_or_names {display: none !important}}</style>
-		<link data-olark="true" rel="stylesheet" href="https://static.olark.com/jsclient/styles/artsy-albatross/theme.css" type="text/css">
+		{i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)})(window,document,'script','https://www.google-analytics.com/analytics.js','ga');ga('create','UA-55635415-1','auto');ga('send','pageview');
+	</script>
+	<script>
+		!function(f,b,e,v,n,t,s)
+		{if(f.fbq)return;n=f.fbq=function(){n.callMethod?n.callMethod.apply(n,arguments):n.queue.push(arguments)};if(!f._fbq)f._fbq=n;n.push=n;n.loaded=!0;n.version='2.0';n.queue=[];t=b.createElement(e);t.async=!0;t.src=v;s=b.getElementsByTagName(e)[0];s.parentNode.insertBefore(t,s)}(window,document,'script','https://connect.facebook.net/en_US/fbevents.js');fbq('init','798157910220272');fbq('track','PageView');
+	</script>
+	<noscript>
+		"<img height=1 width=1 src="https://www.facebook.com/tr?id=798157910220272&amp;ev=PageView&amp;noscript=1">"
+	</noscript>
+	<style data-olark="true" type="text/css">.olark-key,#hbl_code,#olark-data{display: none !important;}</style>
+	<style data-olark="true" type="text/css">
+		@media print
+		{#habla_beta_container_do_not_rely_on_div_classes_or_names {display: none !important}}
+	</style>
+	<link data-olark="true" rel="stylesheet" href="https://static.olark.com/jsclient/styles/artsy-albatross/theme.css" type="text/css">
 </head>
 <body class="home01" style="cursor: default;">
 	<div id="resultLoading" style="width: 100%; height: 100%; position: fixed; z-index: 10000000; top: 0px; left: 0px; right: 0px; bottom: 0px; margin: auto; display: none;">
@@ -57,7 +65,7 @@
 			<div class="box-right">
 				<div class="box">
 					<button type="button" class="btn-sidebar" style="line-height:0">
-						<img class="img-full changetoback" src="https://www.schofficial.com/Content/frontend/img/toggle-menu.png">
+ 						<img class="img-full changetoback" src="https://www.schofficial.com/Content/frontend/img/toggle-menu.png">
 					</button>
 				</div>
 				<div class="box-search box">
@@ -265,11 +273,11 @@
 						<div class="the-date-menu">2019</div>
 						<div class="col-xs-6" style="padding-right:10px">
 							<span>Month</span>
-							<div class="the-date-menu">Apr</div>
+							<div class="the-date-menu">May</div>
 						</div>
 						<div class="col-xs-6" style="padding-left:10px">
 							<span>Date</span>
-							<div class="the-date-menu">22</div>
+							<div class="the-date-menu">06</div>
 						</div>
 						<div class="col-xs-12 nopadding">
 							<span>Day</span>
@@ -340,30 +348,30 @@
 						<div class="col-md-9 nopadding">
 							<div class="flexslider" style="margin-bottom:0">
 								<div class="flex-viewport" style="overflow: hidden; position: relative;">
-									<ul class="slides" style="width: 800%; transition-duration: 0s; transform: translate3d(-1025px, 0px, 0px);">
-										<li class="clone" style="width: 1025px; float: left; display: block;">
+									<ul class="slides" style="width: 800%; transition-duration: 0s; transform: translate3d(-740px, 0px, 0px);">
+										<li class="clone" style="width: 740px; float: left; display: block;">
 											<img src="https://www.schofficial.com/Content/frontend/images/news.jpg" class="img-full" draggable="false">
 										</li>
-										<li class="clone" aria-hidden="true" style="width: 1025px; float: left; display: block;">
+										<li class="clone" aria-hidden="true" style="width: 740px; float: left; display: block;">
 											<img src="https://www.schofficial.com/Content/frontend/images/news.jpg" class="img-full" draggable="false">
 										</li>
-										<li style="width: 1025px; float: left; display: block;" class="flex-active-slide">
+										<li style="width: 740px; float: left; display: block;" class="flex-active-slide">
 											<img src="https://www.schofficial.com/Content/frontend/images/store-img.jpg" class="img-full" draggable="false">
 										</li>
-										<li style="width: 1025px; float: left; display: block;" class="">
+										<li style="width: 740px; float: left; display: block;" class>
 											<img src="https://www.schofficial.com/Content/frontend/images/news.jpg" class="img-full" draggable="false">
 										</li>
-										<li style="width: 1025px; float: left; display: block;" class="clone" aria-hidden="true">
+										<li style="width: 740px; float: left; display: block;" class="clone" aria-hidden="true">
 											<img src="https://www.schofficial.com/Content/frontend/images/store-img.jpg" class="img-full" draggable="false">
 										</li>
-										<li style="width: 1025px; float: left; display: block;" class="clone">
+										<li style="width: 740px; float: left; display: block;" class="clone">
 											<img src="https://www.schofficial.com/Content/frontend/images/store-img.jpg" class="img-full" draggable="false">
 										</li>
 									</ul>
 								</div>
 								<ol class="flex-control-nav flex-control-paging">
 									<li>
-										<a class="flex-active">1</a>
+										<a class="">1</a>
 									</li>
 									<li>
 										<a class="">2</a>
@@ -575,13 +583,13 @@
 			</div>
 		</div>
 	</div>
-			<a title="Go to Top" href="#" id="vt-totop" style="display: none;">
+	<a title="Go to Top" href="#" id="vt-totop" style="display: none;">
 		<span>Go to Top</span>
 	</a>
 	<div class="block-slidebar desktop-sidebar">
-		<div id="content-7" class="bungkusmenu col-md-12 nopadding mCustomScrollbar _mCS_2 mCS-autoHide mCS_no_scrollbar" style="overflow: visible;">
-			<div id="mCSB_2" class="mCustomScrollBox mCS-minimal mCSB_vertical mCSB_outside" tabindex="0" style="max-height: none;">
-				<div id="mCSB_2_container" class="mCSB_container mCS_y_hidden mCS_no_scrollbar_y" style="position:relative; top:0; left:0;" dir="ltr">
+		<div id="content-7" class="bungkusmenu col-md-12 nopadding mCustomScrollbar _mCS_2 mCS-autoHide" style="overflow: visible;">
+			<div id="mCSB_1" class="mCustomScrollBox mCS-minimal mCSB_vertical mCSB_outside" style="max-height: none;" tabindex="0">
+				<div id="mCSB_1_container" class="mCSB_container" style="position:relative; top:0; left:0;" dir="ltr">
 					<button class="close-menu" type="button">
 						<span>close menu</span>
 					</button>
@@ -715,11 +723,11 @@
 						<div class="the-date-menu">2019</div>
 						<div class="col-xs-6" style="padding-right:10px">
 							<span>Month</span>
-							<div class="the-date-menu">Apr</div>
+							<div class="the-date-menu">May</div>
 						</div>
 						<div class="col-xs-6" style="padding-left:10px">
 							<span>Date</span>
-							<div class="the-date-menu">22</div>
+							<div class="the-date-menu">06</div>
 						</div>
 						<div class="col-xs-12 nopadding">
 							<span>Day</span>
@@ -760,9 +768,9 @@
 					</div>
 				</div>
 			</div>
-			<div id="mCSB_2_scrollbar_vertical" class="mCSB_scrollTools mCSB_2_scrollbar mCS-minimal mCSB_scrollTools_vertical" style="display: none;">
+			<div id="mCSB_1_scrollbar_vertical" class="mCSB_scrollTools mCSB_1_scrollbar mCS-minimal mCSB_scrollTools_vertical" style="display: block;">
 				<div class="mCSB_draggerContainer">
-					<div id="mCSB_2_dragger_vertical" class="mCSB_dragger" style="position: absolute; min-height: 50px; top: 0px; display: block; height: 742px; max-height: 779px;" oncontextmenu="return false;">
+					<div id="mCSB_1_dragger_vertical" class="mCSB_dragger" style="position: absolute; min-height: 50px; top: 0px; display: block; height: 742px; max-height: 779px;" oncontextmenu="return false;">
 						<div class="mCSB_dragger_bar" style="line-height: 50px;">
 						</div>
 					</div>
@@ -773,11 +781,12 @@
 	</div>
 	<script src="https://www.schofficial.com/Content/frontend/js/jquery.min.js"></script>
 	<script>
-		(function($){$(document).ready(function(){$('#cssmenu > ul > li > a').click(function(){$('#cssmenu li').removeClass('active');$(this).closest('li').addClass('active');var checkElement=$(this).next();if((checkElement.is('div'))&&(checkElement.is(':visible'))){$(this).closest('li').removeClass('active');checkElement.slideUp('normal');}
-		if((checkElement.is('div'))&&(!checkElement.is(':visible'))){$('#cssmenu ul div:visible').slideUp('normal');checkElement.slideDown('normal');}
-		if($(this).closest('li').find('div').children().length==0){return true;}else{return false;}});$('.cssmenu > ul > li > a').click(function(){$('.cssmenu li').removeClass('active');$(this).closest('li').addClass('active');var checkElement=$(this).next();if((checkElement.is('div'))&&(checkElement.is(':visible'))){$(this).closest('li').removeClass('active');checkElement.slideUp('normal');}
-		if((checkElement.is('div'))&&(!checkElement.is(':visible'))){$('.cssmenu ul div:visible').slideUp('normal');checkElement.slideDown('normal');}
-		if($(this).closest('li').find('div').children().length==0){return true;}else{return false;}});});})(jQuery);
+		(function($)
+			{$(document).ready(function(){$('#cssmenu > ul > li > a').click(function(){$('#cssmenu li').removeClass('active');$(this).closest('li').addClass('active');var checkElement=$(this).next();if((checkElement.is('div'))&&(checkElement.is(':visible'))){$(this).closest('li').removeClass('active');checkElement.slideUp('normal');}
+			if((checkElement.is('div'))&&(!checkElement.is(':visible'))){$('#cssmenu ul div:visible').slideUp('normal');checkElement.slideDown('normal');}
+			if($(this).closest('li').find('div').children().length==0){return true;}else{return false;}});$('.cssmenu > ul > li > a').click(function(){$('.cssmenu li').removeClass('active');$(this).closest('li').addClass('active');var checkElement=$(this).next();if((checkElement.is('div'))&&(checkElement.is(':visible'))){$(this).closest('li').removeClass('active');checkElement.slideUp('normal');}
+			if((checkElement.is('div'))&&(!checkElement.is(':visible'))){$('.cssmenu ul div:visible').slideUp('normal');checkElement.slideDown('normal');}
+			if($(this).closest('li').find('div').children().length==0){return true;}else{return false;}});});})(jQuery);
 	</script>
 	<script src="/Scripts/jquery.cookie-1.4.1.min.js"></script>
 	<script src="/Scripts/jquery.cookie.js"></script>
@@ -820,7 +829,6 @@
 	</script>
 	<div class="block-slidebar"></div>
 	<iframe data-olark="true" aria-hidden="true" style="width: 0px; height: 0px; position: absolute; left: 0px; bottom: 0px; border: none;">
-		
 	</iframe>
 </body>
 </html>
